# gengetopt

./: .gitignore  ChangeLog  Makefile.am  NEWS  NOTES  README  configure.ac
build-aux/: .gitignore
doc/: .gitignore  Makefile.am  gengetopt.texi  no_getopt_long.txt  testdata
src/: Makefile.am  cmdline.ggo  gengetopt.cc  gm.cc
src/skels/: Makefile.am  c_source.h_skel
tests/: Makefile.am  default_values_cmd.h.test  more_than_once_cmd.h.test  no_multi_strings_cmd.h.test  no_multi_types_cmd.h.test  no_optgiven_cmd.h.test  no_prog_name.c  no_strings_cmd.h.test  no_unamed_cmd.h.test  test_align_cmd.h.test  test_all_opts_cmd.h.test  test_conf_parser_cmd.h.test  test_err.sh.in  test_first_cmdline_cmd.h.test  test_groups_cmd.h.test  test_main_cmdline_cmd.h.test  test_manual_help_args.sh.in  test_manual_help_args_cmd.h.test  test_manual_help_cmd.h.test  test_modes_cmd.h.test  test_multiple_cmd.h.test  test_newlines_cmd.h.test  test_no_handle_help_cmd.h.test  test_no_options_cmd.h.test  test_only_flags_cmd.h.test  test_output_dir.sh.in  test_output_dirs.sh.in  test_redef_help_cmd.h.test  test_second_cmdline_cmd.h.test  test_simple_multiple_cmd.h.test  test_text_cmd.h.test  test_unamed.sh.in  test_unnamed.sh.in  test_usage_cmd.h.test  test_values_cmd.h.test  test_wrong_ggo.sh.in  valgrind_suppressions.sh.in  valgrind_tests.sh.in
